IA finishes + secure secrets

--- a/app/src/main/res/values/secrets.xml
+++ b/app/src/main/res/values/secrets.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-        <string name="gemini_api_key">AIzaSyCsc2j2ylaI0kT2Tk2oA3g3JA5__R2-b34</string>
+<!--       <string name="gemini_api_key">AIzaSyCsc2j2ylaI0kT2Tk2oA3g3JA5__R2-b34</string> -->
 
-
+    <string name="grok_api_key">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</string>
 </resources>
